# punch93893fh97f3f4

./: .env.example  .gitignore  db.js  middleware.js  nixpacks.toml  package-lock.json  package.json  railway.toml  server.js  tailwind.config.js
app/: globals.css  layout.js  page.js
app/admin/: page.js
app/api/activate-key/: route.js
app/api/bind-hwid/: route.js
app/api/change-email/: route.js
app/api/loader-handoff/: route.js
app/cabinet/: page.js
app/login/: page.js
app/payment/: page.js
app/register/: page.js
components/: AnimeHeroBanner.jsx  Carousel.jsx  CheckoutModal.jsx  FallingText.jsx  GeometricBg.jsx  LandingHeader.jsx  LightPillar.jsx  Protection.jsx  SmoothScroll.jsx  SpotlightGrid.jsx  TiltCard.jsx
context/: AuthContext.jsx
data/: README.md  punch-ebd.db
lib/: api.js  core.js  cryptobot.js  db.js
loader/: CMakeLists.txt  README.md  build.bat
loader/src/: main.cpp
loader/ui/: index.html
public/: admin.html  cabinet.html  download.html  gallery.html  index.html  loader-auth.html  login.html  payment.html  pricing.html  register.html
public/css/: landing.css  style.css
public/downloads/: punch-fabric-launch.ps1
public/js/: admin.js  app.js  auth-animate.js  cabinet.js  carousel.js  common.js  cursor-shader.js  decorations.js  falling-letters.js  light-pillar.js  purchase.js  purple-rays.js  rays-bg.js  roles.js  scroll-brand.js  theme.js  tilt-light.js
scripts/: build-uiengine.bat  inspect-db.js  kill-port.js  kill-port.ps1  pack-loader.js  patch-game-icon.py  sync-loader-ui.js  test-dup-email.js  test-register-api.js
(+26 files in other folders)
